2010-02-18  Adam Endrodi <adam.endrodi@blumsoft.eu>

	NB#155904 Task Switcher is not glowing after reboot in case of
		  new unread SMS message

	We didn't exit cleanly when we received the shutdown_ind signal.

	* src/hd-hildon-home-dbus.c (hd_hildon_home_system_bus_signal_handler):
	  Only quit the main loop, not main(), and let it clean up.

2010-02-17  Adam Endrodi <adam.endrodi@blumsoft.eu>

	Send ActionInvoked signals without a concrete destination.
	The unique names we used as destinations become invalid after
	rebooting so the intended address didn't get it eventually.

	* src/hd-notification-manager.c (hd_notification_manager_create_signal):
	  Don't specify a concrete destination.

2010-02-17  Adam Endrodi <adam.endrodi@blumsoft.eu>

	NB#152279 Tapping grouped message preview doesn't bring
		  conversation to foreground

	Because we just sent GroupMessageInvoked but messaging-ui needs
	ActionInvoked.  So send both of them, just in case.

	* src/hd-incoming-events.c:
	  Make it possible for D-Bus-Callback to have a list of values,
	  and recognize "default" to indicate sending the ActionInvoked
	  signal.

2010-02-08  Adam Endrodi <adam.endrodi@blumsoft.eu>

	Release 0.3.65-1.

2010-02-04  Adam Endrodi <adam.endrodi@blumsoft.eu>

	Release 0.3.65.

2010-02-04  Adam Endrodi <adam.endrodi@blumsoft.eu>

	NB#154418 Text in chat-invitation notifications is unchangeable

	* src/notification-groups.conf:
	  Copied [chat-invitation] to [group-chat-invitation] with
	  a different Secondary-Text.

2009-12-18  Jan Arne Petersen  <jpetersen@openismus.com>

	Release 0.3.62.

2009-12-18  Jan Arne Petersen  <jpetersen@openismus.com>

	Fix length of NULL-terminated string array.

	Fixes: NB#151417 - Hildon Crashes always in a scenario

	* src/hd-search-service.c: Fix length of NULL-terminated string array.

2009-12-17  Jan Arne Petersen  <jpetersen@openismus.com>

	Release 0.3.61.

2009-12-17  Jan Arne Petersen  <jpetersen@openismus.com>
