@@ -44,6 +44,7 @@ enum
   HD_BACKGROUND_COL_THUMBNAIL,
   HD_BACKGROUND_COL_OBJECT,
   HD_BACKGROUND_COL_VISIBLE,
+  HD_BACKGROUND_COL_OVI,
   HD_BACKGROUND_NUM_COLS
 };
 
