@@ -24,12 +24,14 @@
 #include <config.h>
 #endif
 
+#include <dbus/dbus.h>
+
 #include "hd-dbus-utils.h"
 
 DBusGConnection *
 hd_get_session_dbus_connection (void)
 {
-  DBusGConnection *session_dbus;
+  DBusGConnection *session_dbus = NULL;
   GError *error = NULL;
 
   session_dbus = dbus_g_bus_get (DBUS_BUS_SESSION, &error);
@@ -48,7 +50,7 @@ hd_get_session_dbus_connection (void)
 DBusGConnection *
 hd_get_system_dbus_connection (void)
 {
-  DBusGConnection *system_dbus;
+  DBusGConnection *system_dbus = NULL;
   GError *error = NULL;
 
   system_dbus = dbus_g_bus_get (DBUS_BUS_SYSTEM, &error);
@@ -62,4 +64,44 @@ hd_get_system_dbus_connection (void)
     }
 
   return system_dbus;
+}
+
+#define DBUS_BROWSER_SERVICE    "com.nokia.osso_browser"
+#define DBUS_BROWSER_PATH       "/com/nokia/osso_browser/request"
+#define DBUS_BROWSER_INSTERFACE "com.nokia.osso_browser"
+#define DBUS_BROWSER_METHOD     "open_new_window"
+
+void
+hd_utils_open_link (const gchar *link)
+{
+  DBusConnection *conn = NULL;
+  DBusMessage *msg = NULL;
+
+  g_debug ("%s: opening %s", __FUNCTION__, link);
+
+  conn = dbus_bus_get (DBUS_BUS_SESSION, NULL);
+  if (!conn)
+    {
+      g_debug ("%s: Couldn't connect to session bus", __FUNCTION__);
+      return;
+    }
+
+  msg = dbus_message_new_method_call (DBUS_BROWSER_SERVICE,
+                                      DBUS_BROWSER_PATH,
+                                      DBUS_BROWSER_SERVICE,
+                                      DBUS_BROWSER_METHOD);
+  if (!msg)
+    {
+      return;
+    }
+
+  dbus_message_set_auto_start (msg, TRUE);
+  dbus_message_set_no_reply (msg, TRUE);
+  dbus_message_append_args (msg, DBUS_TYPE_STRING, &link, DBUS_TYPE_INVALID);
+  if (!dbus_connection_send (conn, msg, NULL))
+    {
+      return;
+    }
+
+  dbus_message_unref (msg);
 }
